commiting medium version

--- a/client/package.json
+++ b/client/package.json
@@ -15,5 +15,8 @@
   "bugs": {
     "url": "https://github.com/santoshbalaji/medium-app/issues"
   },
-  "homepage": "https://github.com/santoshbalaji/medium-app#readme"
+  "homepage": "https://github.com/santoshbalaji/medium-app#readme",
+  "dependencies": {
+    "express": "^4.17.1"
+  }
 }
